Bug 118302 - Tabs' content in calc get deleted by accident (GTK3)
Summary: Tabs' content in calc get deleted by accident (GTK3)
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
5.4.5.1 release
Hardware: All Linux (All)
: high major
Assignee: Caolán McNamara
URL:
Whiteboard: target:6.2.0 target:6.1.0.2 target:6.0.7
Keywords: bibisected, bisected, dataLoss, regression
: 105320 120384 (view as bug list)
Depends on:
Blocks: GTK3 Sheet-Tabs-Bar
  Show dependency treegraph
 
Reported: 2018-06-21 13:03 UTC by info
Modified: 2018-11-25 17:36 UTC (History)
7 users (show)

See Also:
Crash report or crash signature:


Attachments
A pic to help reproduce the problem (25.76 KB, image/jpeg)
2018-06-21 13:04 UTC, info
Details

Note You need to log in before you can comment on or make changes to this bug.
Description info 2018-06-21 13:03:00 UTC
Description:
When I create a document in calc that uses multiple tabs and drag and drop a tab just a bit to the left or right, the tab's content will be deleted (in a similar manner to ctrl+A DEL). 
This happens easily when you try and click the horizontal scrollbar. 

Steps to Reproduce:
1.create a document in calc
2.click on the + on the lower left to add a few tabs and fill every tab with a bit of data 
3.grab one of the tabs and drag it to its own border and let it go. 
4.the tab that has been grabbed is now empty 

Actual Results:
the content of the tab gets deleted, in the same manner as a CTRL+A and DEL would do. 

Expected Results:
Actually, I'd expect nothing to happen. 


Reproducible: Always


User Profile Reset: Yes



Additional Info:
Comment 1 info 2018-06-21 13:03:42 UTC
Version: 6.0.4.2
Build-ID: 1:6.0.4~rc2-0ubuntu0.18.04.1
CPU-Threads: 4; BS: Linux 4.15; UI-Render: Standard; VCL: gtk3; 
Gebietsschema: de-DE (en_US.UTF-8); Calc: group
Comment 2 info 2018-06-21 13:04:21 UTC
Created attachment 142997 [details]
A pic to help reproduce the problem
Comment 3 Roman Kuznetsov 2018-06-22 08:20:19 UTC
don't repro in LO 6.1 beta 2 on Windows 7 32 bit
Comment 4 malboarg 2018-06-23 21:30:51 UTC
I can not reproduce the bug in

Version: 6.0.5.1
Build ID: 0588a1cb9a40c4a6a029e1d442a2b9767d612751
CPU threads: 2; OS: Linux 4.4; UI render: default; VCL: gtk2;

Version: 6.1.0.0.beta1
Build ID: 8c76dfe1284e211954c30f219b3a38dcdd82f8a0
CPU threads: 2; OS: Linux 4.4; UI render: default; VCL: gtk2;
Comment 5 Buovjaga 2018-07-13 14:31:23 UTC
Repro on Linux with GTK3 only (explains malboarg's result with gtk2). Not on Windows.
Marking as dataLoss because someone might not notice data vanishing and then save over their file.

I found an older report which mixed multiple issues including this one: bug 116075 Thus lowering version number.

Arch Linux 64-bit
Version: 6.2.0.0.alpha0+
Build ID: bd394492c165d27c96a44495d9ca694a242acb8f
CPU threads: 8; OS: Linux 4.17; UI render: default; VCL: gtk3; 
Locale: fi-FI (fi_FI.UTF-8); Calc: group threaded
Built on July 11th 2018
Comment 6 Xisco Faulí 2018-07-16 15:17:22 UTC
Regression introduced by:

https://cgit.freedesktop.org/libreoffice/core/commit/?id=4ea76db5e53235971b597a2810a6d12618d6aaea

author	Caolán McNamara <caolanm@redhat.com>	2017-03-13 12:28:12 +0000
committer	Caolán McNamara <caolanm@redhat.com>	2017-03-13 12:30:09 +0000
commit 4ea76db5e53235971b597a2810a6d12618d6aaea (patch)
tree 187cafa3ada5c2cac2f2e477ed4a7369a9c066d5
parent 4842f402c68397edcb960f8e83f43028af8eb3db (diff)
rhbz#1431476 dnd has started copying instead of moving slides
Is suspect something has changed in gtk3, and I think we're
not supposed to use gdk_drag_drop_succeeded at this point, but
instead we'd get a dragFailed signal on the failure case

Bisected with: bibisect-linux-64-5.4

Adding Cc: to Caolán McNamara
Comment 7 Caolán McNamara 2018-07-17 20:24:45 UTC
The mac version of dnd appears to have had the same problem in the past, so I'll follow the pattern there
Comment 8 Commit Notification 2018-07-18 07:27:11 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=c92dd5a2ba5fd07a32d1671bb8dfcb03bfb95e10

Resolves: tdf#118302 drag n drop to same tab should cancel dnd

It will be available in 6.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Caolán McNamara 2018-07-18 07:30:35 UTC
backport to 6-1 and 6-0 in gerrit
Comment 10 Xisco Faulí 2018-07-19 15:55:16 UTC
Verified in

Version: 6.2.0.0.alpha0+
Build ID: 95b00f1bfa341003af23e150d316d943d47909cf
CPU threads: 4; OS: Linux 4.13; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group threaded

@Caolán, thanks for fixing this!!
Comment 11 Commit Notification 2018-07-19 15:57:05 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-6-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=896b7e69a3182a0142a323ba5f76a2d8a811091a&h=libreoffice-6-1

Resolves: tdf#118302 drag n drop to same tab should cancel dnd

It will be available in 6.1.0.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 12 Xisco Faulí 2018-07-19 16:36:28 UTC
*** Bug 105320 has been marked as a duplicate of this bug. ***
Comment 13 Commit Notification 2018-07-23 15:13:35 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-6-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=e6e9bae8f3eefa1e4529886ea995cc4cf8e3d817&h=libreoffice-6-0

Resolves: tdf#118302 drag n drop to same tab should cancel dnd

It will be available in 6.0.7.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 14 Buovjaga 2018-11-25 17:36:24 UTC
*** Bug 120384 has been marked as a duplicate of this bug. ***