Resolves: tdf#118302 drag n drop to same tab should cancel dnd

dropComplete is used to do this, follow the mac pattern here to
propogate this in the drag and drop from self to self case.

Maybe this also affects tdf#105320 ?

Change-Id: I2b8f8b0e0486f6ee45a65918fae2537750a75f2d